# Housing-Pricing-End-to-End-ML

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  DOCKER.md  DOCKER_QUICK_REFERENCE.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
models/: frequency_encoder.pkl  lightgbm_model.pkl  target_encoder.pkl
notebooks/: XGBoost.ipynb  baseline.ipynb  data_cleaning.ipynb  data_split.ipynb  feature_eng_encoding.ipynb  hyperparameter_tunning_MLFlow.ipynb  lightGBM.ipynb
scripts/: s3_upload.py
src/: __init__.py
src/api/: main.py
src/feature_pipeline/: __init__.py  feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: __init__.py  inference.py
src/training_pipeline/: __init__.py  test.py  train.py  tune.py
tests/: README.md  __init__.py  conftest.py  test_feature_engineering.py  test_load.py  test_preprocess.py  test_training_pipeline.py
